syntax = "proto3";

option java_multiple_files = true;
option java_package = "nu.westlin.grpc.users";
option java_outer_classname = "UsersProto";
option objc_class_prefix = "HLW";

package users;

service UserService {
    rpc GetUser (UserRequest) returns (UserResponse) {
    }
}

message UserRequest {
    string id = 1;
}

message UserResponse {
    string message = 1;
}
